[gd_scene load_steps=3 format=3 uid="uid://4kofdi0ogs3j"]

[ext_resource type="Script" uid="uid://ctkc6sx3fm5kt" path="res://scripts/Items/slots/inv_grid_pouch.gd" id="1_bgge8"]
[ext_resource type="PackedScene" uid="uid://ds82we8fhiky8" path="res://scenes/GUIParts/inventory_slot.tscn" id="1_orb4i"]

[node name="InvGridPouch" type="Node2D"]
script = ExtResource("1_bgge8")

[node name="InventorySlot" parent="." instance=ExtResource("1_orb4i")]

[node name="InventorySlot2" parent="." instance=ExtResource("1_orb4i")]
position = Vector2(16, 0)

[node name="InventorySlot3" parent="." instance=ExtResource("1_orb4i")]
position = Vector2(32, 0)

[node name="InventorySlot4" parent="." instance=ExtResource("1_orb4i")]
position = Vector2(48, 0)

[node name="InventorySlot5" parent="." instance=ExtResource("1_orb4i")]
position = Vector2(64, 0)

[node name="InventorySlot6" parent="." instance=ExtResource("1_orb4i")]
position = Vector2(80, 0)

[node name="InventorySlot7" parent="." instance=ExtResource("1_orb4i")]
position = Vector2(96, 0)

[node name="InventorySlot8" parent="." instance=ExtResource("1_orb4i")]
position = Vector2(112, 0)
